--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@blockstack/connect": "^2.12.7",
     "@blockstack/ui": "^2.12.14",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.0.0",
@@ -30,6 +31,7 @@
     "@stacks/storage": "^1.0.0-beta.19",
     "blockstack": "^21.1.1",
     "export-from-json": "^1.3.4",
+    "monorepo": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -64,6 +66,8 @@
   "devDependencies": {
     "@blockstack/eslint-config": "^1.0.5",
     "@blockstack/prettier-config": "0.0.6",
+    "@stacks/connect-react": "^5.0.5",
+    "@stacks/transactions": "^1.3.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-config-react-app": "^5.2.1",
